# Web3_hackaton_project

./: .gitignore  README.md  package-lock.json  project.md
backend/: package-lock.json  package.json
backend/prisma/: schema.prisma
backend/src/: config.ts  index.ts
backend/src/middleware/: auth.ts  errorHandler.ts
backend/src/routes/: auth.ts  reservations.ts  salons.ts  services.ts  webhooks.ts
backend/src/services/: database.ts  solana.ts
contracts/: Anchor.toml  Cargo.toml  package-lock.json  package.json  tsconfig.json
contracts/programs/solbook/: Cargo.toml
contracts/programs/solbook/src/: lib.rs
contracts/scripts/: deploy.ts  register-salon.ts
contracts/tests/: solbook.ts
docs/: SMART_CONTRACT.md
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/book/[id]/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/refund-policy/: page.tsx
frontend/src/app/reservations/: page.tsx
frontend/src/app/salons/: page.tsx
frontend/src/app/services/: page.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx
frontend/src/components/providers/: Providers.tsx  ThemeProvider.tsx
frontend/src/components/ui/: ThemeToggle.tsx  WalletButton.tsx
frontend/src/lib/: api.ts  solana.ts  store.ts
scripts/: setup.ps1  setup.sh
